--- a/BHP-Anime/Scences/Home/Cells/ProfileCell/ProfileCell.xib
+++ b/BHP-Anime/Scences/Home/Cells/ProfileCell/ProfileCell.xib
@@ -24,6 +24,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UoA-nT-fZl">
                         <rect key="frame" x="0.0" y="0.0" width="120" height="180"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="180" id="5YT-Bo-bqN"/>
                         </constraints>
