--- a/BHP-Anime/Scences/Home/Cells/EspisodeCell/EspisodeCell.xib
+++ b/BHP-Anime/Scences/Home/Cells/EspisodeCell/EspisodeCell.xib
@@ -17,8 +17,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="305" height="379"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test" translatesAutoresizingMaskIntoConstraints="NO" id="ygt-y6-49O">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ygt-y6-49O">
                         <rect key="frame" x="0.0" y="0.0" width="305" height="379"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </imageView>
                 </subviews>
             </view>
@@ -36,7 +37,4 @@
             <point key="canvasLocation" x="105.07246376811595" y="100.11160714285714"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="test" width="1024" height="1024"/>
-    </resources>
 </document>
