--- a/BHP-Anime/Scences/Home/Cells/GalleryCell/GalleryCell.xib
+++ b/BHP-Anime/Scences/Home/Cells/GalleryCell/GalleryCell.xib
@@ -19,6 +19,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8SK-mx-ZTp">
                         <rect key="frame" x="0.0" y="0.0" width="290" height="85"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </imageView>
                 </subviews>
             </view>
